// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  className="EntityList"
  onScroll={[Function]}
>
  <div
    className="header"
  >
    <div
      className="titleBar"
    >
      <h1>
        EntityList Name
      </h1>
      <SearchField
        onChange={[Function]}
        value=""
      />
      <div
        className="action"
      >
        <button>
          Click Me
        </button>
      </div>
    </div>
  </div>
  <div
    className="content"
  >
    <ul
      className="itemsList"
    >
      <ListItem
        data={
          Object {
            "actions": Array [
              Object {
                "action": [MockFunction],
                "icon": "edit",
                "text": "Edit",
              },
            ],
            "icon": "iconType",
            "id": "aCollectionId",
            "meta": Array [
              "Some info",
              "Some additional info",
              "Some other info",
            ],
            "name": "aCollectionName",
            "type": "Collection",
          }
        }
        hasWarning={false}
        isSelected={false}
        key="0"
        onSelectionChange={[Function]}
        selectable={false}
        singleAction={true}
      />
      <ListItem
        data={
          Object {
            "icon": "iconType",
            "id": "aDashboardId",
            "meta": Array [
              "Some info",
              "Some additional info",
              "Some other info",
            ],
            "name": "aDashboard",
            "type": "Dashboard",
          }
        }
        hasWarning={false}
        isSelected={false}
        key="1"
        onSelectionChange={[Function]}
        selectable={false}
        singleAction={true}
      />
      <ListItem
        data={
          Object {
            "icon": "iconType",
            "id": "aReportId",
            "link": "link/to/somewhere",
            "meta": Array [
              "Some info",
              "Some additional info",
              "Some other info",
              "special info",
            ],
            "name": "aReport",
            "type": "Report",
          }
        }
        hasWarning={false}
        isSelected={false}
        key="2"
        onSelectionChange={[Function]}
        selectable={false}
        singleAction={true}
      />
    </ul>
    <div>
      Some additional Content
    </div>
  </div>
</div>
`;

exports[`should not show a header entry for column entries that are hidden 1`] = `
<div
  className="columnHeaders"
>
  <ForwardRef(Input)
    checked={false}
    className="hidden"
    onChange={[Function]}
    type="checkbox"
  />
  <Tooltip
    content="Name"
    key="0"
    overflowOnly={true}
  >
    <div
      className="name"
    >
      <span
        onClick={[Function]}
      >
        Name
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Another Column"
    key="1"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Another Column
      </span>
    </div>
  </Tooltip>
</div>
`;

exports[`should show a column header if specified 1`] = `
<div
  className="columnHeaders"
>
  <ForwardRef(Input)
    checked={false}
    className="hidden"
    onChange={[Function]}
    type="checkbox"
  />
  <Tooltip
    content="Name"
    key="0"
    overflowOnly={true}
  >
    <div
      className="name"
    >
      <span
        onClick={[Function]}
      >
        Name
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Meta 1"
    key="1"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Meta 1
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Meta 2"
    key="2"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Meta 2
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Meta 3"
    key="3"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Meta 3
      </span>
    </div>
  </Tooltip>
</div>
`;
